# ComputerAgent2

./: .gitignore  README.md
.github/workflows/: release.yml
App/: .gitignore  dev.bat  package-lock.json  package.json  setup.bat  universe-ai.html
App/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
App/frontend/src/: App.tsx  api.ts  main.tsx  store.ts  theme.ts
App/frontend/src/components/: AIChatSidebar.tsx  Btn.tsx  DTBadge.tsx  Field.tsx  PipelineCanvas.tsx  Spinner.tsx  Stub.tsx  Tag.tsx  Toggle.tsx
App/frontend/src/data/: connections.ts  pipelines.ts
App/frontend/src/hooks/: usePipelineSync.ts
App/frontend/src/tabs/: Agents.tsx  Automations.tsx  Chat.tsx  Connections.tsx  Models.tsx  Modifications.tsx  Pipelines.tsx  Settings.tsx  Tools.tsx
App/sidecar/: .gitignore  config.py  main.py  polish_agent.py  requirements.txt  self_modifier.py
App/src-tauri/: Cargo.toml  tauri.conf.json
App/src-tauri/.cargo/: config.toml
App/src-tauri/icons/: icon.icns
App/src-tauri/src/: lib.rs  main.rs
