[package]
name = "universe-ai"
version = "0.1.0"
description = "Universe AI Desktop App"
authors = ["Universe AI"]
edition = "2021"

[lib]
name = "universe_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "universe-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
